[package]
name        = "nix-template"
version     = "0.1.1"
description = "Utility to generate common nix expressions"
license     = "CC0-1.0"
homepage    = "https://github.com/jonringer/nix-template"
repository  = "https://github.com/jonringer/nix-template"
authors     = ["Jonathan Ringer <jonringer117@gmail.com>"]
edition     = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "^2.0"
env_logger = "0.8"
lazy_static = "^1.4"
regex = "^1.3"
xdg = "^2.1"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
toml = "^0.5.0"
reqwest = { version = "^0.11.0", features = [ "json", "blocking"] }
log = "^0.4"
anyhow = "^1.0"
version-compare = "^0.0.11"

[dev-dependencies]
serial_test = "0.4"
pretty_assertions = "0.6"
serde_derive = "^1.0"
